# dd_pyparse

./: Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
src/dd_pyparse/core/parsers/: __init__.py  base.py  csv.py  doc.py  docx.py  email.py  gzip.py  html.py  image.py  json.py  mbox.py  msg.py  ods.py  pdf.py  ppt.py  pptx.py  rar.py  sevenzip.py  tar.py  tsv.py  txt.py  video.py  xls.py  xlsx.py  xml.py  zip.py
src/dd_pyparse/core/utils/: externals.py  filetype.py  general.py  msoffice.py  patterns.py  pdf.py  text.py
src/dd_pyparse/interfaces/: _cli.py  _fastapi.py
src/dd_pyparse/schemas/: __init__.py  base.py  enums.py  error.py  fragments.py  settings.py
src/dd_pyparse/schemas/annotations/: base.py
src/dd_pyparse/schemas/data/: __init__.py  archive.py  audio.py  chat.py  code.py  document.py  email.py  image.py  location.py  log.py  table.py  video.py
src/dd_pyparse/schemas/data/parents/: file.py  message.py
src/dd_pyparse/utils/: exceptions.py  health.py  info.py  logging.py
src/pyparse/: api.py
src/pyparse/parsers/: __init__.py  email.py  file.py  image.py  txt.py
src/pyparse/schemas/: base.py  enums.py  fragments.py  settings.py
src/pyparse/schemas/annotations/: base.py
src/pyparse/schemas/data/: __init__.py  audio.py  chat.py  document.py  email.py  image.py  video.py
src/pyparse/schemas/data/parents/: file.py  message.py
src/pyparse/utils/: exceptions.py  logging.py
tests/: test_main.py
tests/assets/: .~lock.test.doc#  rartest.rar  test.txt
